--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -1,16 +1,70 @@
 
+/* headbox ================================================= */
+
+.headbox{
+    background: url(../img/bghead.jpg) no-repeat center center;
+    background-size: cover;
+
+    height: 100vh;
+    
+    display: flex;
+    align-items: center;
+
+    &-wrap{
+        max-width: 850px;
+        margin: auto;
+        padding: 20px;
+        text-align: center;
+        h1{
+            font-size: 90px;
+        }
+        &__text{
+            font-size: 18px;
+            line-height: 24px;
+            margin-bottom: 20px;
+            margin-top: 18px;
+            &--link{
+                color: #ffffff;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+/* social ================================================= */
+
+.social{
+    margin-top: 20px;
+    &__link{
+        margin-right: 12px;
+        font-size: 26px;
+        transition: 0.5s;
+        &:hover{
+            color: #ffffff;
+        }
+        &:last-child{
+            margin-right: 0;
+        }
+    }
+}
+
 /* project ================================================= */
 
 .project{
     background: url(../img/bg.jpg) no-repeat center center;
     background-size: cover;
+
+    min-height: 100vh;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &-wrap{
-        padding-top: 200px;
-        padding-bottom: 200px;
+        padding: 30px 0;
         &__item{
             background-color: rgba(83, 28, 145, 0.137);
             display: flex;
-            height: 178px;
+            height:auto;
             margin-bottom: 30px;
             &:hover{
                 .project-wrap__img{
@@ -24,7 +78,8 @@
         }
         &__img-box{
             width: 380px;
-            height: 100%;
+            
+            height: 178px;
             position: relative;
             overflow: hidden;
             transition: 0.5s;
@@ -56,7 +111,132 @@
             justify-content: space-between;
         }
         &__date{
+            margin-top: 20px;
             color: #ffffff;
+            font-size: 17px;
+            line-height: 19px;
+        }
+    }
+}
+
+.btn-botton{
+    position: absolute;
+    bottom: 35px;
+    right: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    box-shadow: 0 0 6px 1px rgba(51,0,51,.24);
+    background-color: #fff;
+    opacity: .2;
+    transition: .5s;
+}
+
+
+@media (max-width:992px){
+    .headbox{
+        &-wrap{
+            h1{
+                font-size: 70px;
+            }
+        }
+    }
+}
+
+@media(min-width: 767px){
+    .btn-botton{
+        background-color: transparent;
+        box-shadow: 0 0 6px 1px rgba(226, 14, 226, 0.24);
+        opacity: 1;
+    }
+}
+@media(max-width: 767px){
+    .btn-botton{
+        bottom: 20px;
+        right: 15px;
+        width: 35px;
+        height: 35px;
+        background-color: #fff;
+        opacity: .2;
+        transition: .5s;
+    }
+    
+    
+    .headbox{
+        &-wrap{
+            padding: 10px;
+            h1{
+                font-size: 50px;
+            }
+        }
+    }
+
+    .project-wrap__item{
+        display: block;
+        margin-left: auto;
+    }
+    .project-wrap__img-box{
+        margin: auto;
+    }
+    .project-wrap{
+        text-align: center;
+    }
+}
+
+@media(max-width: 589px){
+    .headbox{
+        &-wrap{
+            padding: 10px;
+            h1{
+                font-size: 40px;
+            }
+            &__text{
+                font-size: 16px;
+                line-height: 22px;
+                margin-bottom: 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+    .social{
+        margin-top: 15px;
+        &__link{
+            margin-right: 11px;
+            font-size: 22px;
+            transition: 0.5s;
+        }
+    }
+
+}
+
+@media(max-width: 479px){
+    .headbox{
+        &-wrap{
+            h1{
+                font-size: 25px;
+            }
+            &__text{
+                font-size: 12px;
+                line-height: 20px;
+                margin-bottom: 15px;
+                margin-top: 15px;
+            }
+        }
+    }
+
+    .project-wrap__img-box{
+        width: 100%;
+    }
+    .project-wrap{
+        h2{
+            font-size: 16px;
+            line-height: 16px;
+        }
+        &__date{
+            font-size: 14px;
+            line-height: 16px;
         }
     }
 }
