--- a/test/scss/_custom.scss
+++ b/test/scss/_custom.scss
@@ -1,5 +1,4 @@
 
-/* popular ================================================= */
 
 .popular{
     background: #1C1C1E;
@@ -50,7 +49,6 @@
     }
 }
 
-/* slider ================================================= */
 
 .popular{
     &-dots{
@@ -114,19 +112,49 @@
     .popular{
         &-wrap{
             &__item{
+                margin: 20px auto;
                 width: 300px;
                 height: 300px;
             }
-            &__img{
-                img{
-                }
-                &:before{
-                }
-            }
             &__name-game{
-            }
-            &__slider{
+                font-size: 22px;
             }
         }
     }
+}
+@media(max-width: 768px){
+    .popular{
+        background: #1C1C1E;
+        padding: 70px 0;
+        &-wrap{
+            &__item{
+                width: 327px;
+                height: 327px;
+                margin: 0 auto;
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+@media(max-width: 440px){
+    h2{
+        padding-left: 16px;
+    }
+    .wrapper{
+        padding: 0px;
+    }
+    .popular{
+        background: #1C1C1E;
+        padding: 70px 0;
+        &-wrap{
+            &__item{
+                margin: 0 auto;
+                margin-bottom: 20px;
+            }
+            &__slider{
+                margin: 0;
+                margin-top: 32px;
+            }
+        }
+    }  
 }
