--- a/test/scss/_custom.scss
+++ b/test/scss/_custom.scss
@@ -158,3 +158,20 @@
         }
     }  
 }
+
+@media(max-width: 374px){
+    h2{
+        padding-left: 0;
+        text-align: center;
+        font-size: 30px;
+    }
+    .popular{
+        &-wrap{
+            &__item{
+                width: 100%;
+                height: 320px;
+                border-radius: 0;
+            }
+        }
+    }
+}    
