--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -1,4 +1,41 @@
 
+/* loading ================================================= */
+
+.loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: black;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 999999;
+  transition: 0.3s;
+  &-hide{
+    opacity: 0;
+  }
+  &__text{
+    display: flex;
+    color: white;
+    font-size: 2rem;
+    font-family: Lato, sans-serif;
+    letter-spacing: 0.5rem;
+    text-transform: uppercase;
+    
+    span {
+        animation: shrink 2s infinite;
+    }
+  }
+}
+
+@keyframes shrink {
+    50% {
+      transform: scale(0);
+    }
+  }
 /* headbox ================================================= */
 
 .headbox{
@@ -60,7 +97,7 @@
     align-items: center;
     justify-content: center;
     &-wrap{
-        padding: 30px 0;
+        padding: 90px 0;
         &__item{
             background-color: rgba(83, 28, 145, 0.137);
             display: flex;
@@ -105,11 +142,12 @@
         &__text-box{
             padding: 20px 30px;
             width: 100%;
-            height: 100%;
+            min-height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
         }
+
         &__date{
             margin-top: 20px;
             color: #ffffff;
@@ -182,6 +220,7 @@
     }
     .project-wrap{
         text-align: center;
+        padding: 30px 0;
     }
 }
 
