--- a/SiteForPr4 (port)/scss/main.scss
+++ b/SiteForPr4 (port)/scss/main.scss
@@ -10,6 +10,11 @@ h2{
 	font-size: 20px;
 	line-height: 20px;
 }
+h3{
+	font-size: 50px;
+	text-align: center;
+	color: #fff;
+}
 .hr{
 	height: 1px;
 	background: #ffffff;
