--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -123,11 +123,11 @@
             }
         }
         &__img-box{
-            width: 380px;
+            width: 480px;
             
-            height: 178px;
+            height: 210px;
             position: relative;
-            overflow: hidden;
+            // overflow: hidden;
             transition: 0.5s;
             a{
                 display: block;
