--- a/SiteForPr4 (port)/scss/main.scss
+++ b/SiteForPr4 (port)/scss/main.scss
@@ -6,18 +6,18 @@ body{
 	background-color: #0b041ac7;
 }
 h2{
-	color: #fff;
+	color: rgb(0, 164, 185);
 	font-size: 24px;
 	line-height: 20px;
 }
 h3{
 	font-size: 50px;
 	text-align: center;
-	color: #fff;
+	color: #eeeeee;
 }
 .hr{
 	height: 1px;
-	background: #ffffff;
+	background: #eeeeee;
 	margin: 0 40px;
 	opacity: 0.2;
 }
