--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -1,14 +1,15 @@
 
 .headbox{
-    background: url(../img/bghead.jpg) no-repeat center center;
+    background-image: url(../img/bghead.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
 
-    height: 100vh;
     
     display: flex;
     align-items: center;
 
     &-wrap{
+        height: 100vh;
         max-width: 850px;
         margin: auto;
         padding: 20px;
