--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -250,10 +250,14 @@ nav{
     min-height: 100vh;
     display: flex;
     align-items: center;
+    h3{
+        margin-bottom: 40px;
+    }
     &-list{
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
+        text-align: center;
         &__item{
             margin-top: 30px;
             border: 1px solid #ffffff;
@@ -290,8 +294,6 @@ nav{
     &-contacts{
         a{
             font-size: 16px;
-            span{
-            }
         }
     }
 }
@@ -358,8 +360,6 @@ nav{
     }
     .project{
         &-wrap{
-            text-align: center;
-            padding: 30px 0;
             h3{
                 padding-bottom: 0;
             }
