--- a/SiteForPr4 (port)/scss/_custom.scss
+++ b/SiteForPr4 (port)/scss/_custom.scss
@@ -312,6 +312,14 @@ nav{
             animation: icon-animation 2s infinite ease-in-out;
             transition: 0.6s;
         }
+        &--js{
+            width: 84px;
+            height: 84px;
+            margin: auto;
+            svg{
+                fill: #ffffff;
+            }
+        }
         font-size: 60px;
     }
     &__face{
@@ -483,6 +491,10 @@ nav{
         overflow: hidden;
         &__icon{
             font-size: 45px;
+            &--js{
+                width: 58px;
+                height: 58px;
+            }
         }
         &__face{
             &.cart__face1{
