--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -190,9 +190,9 @@ ol {
 }
 
 .louder:not(.active) {
-  -webkit-transform: translateY(-100vh);
-  -ms-transform: translateY(-100vh);
-  transform: translateY(-100vh);
+  -webkit-transform: translateY(-120vh);
+  -ms-transform: translateY(-120vh);
+  transform: translateY(-120vh);
 }
 
 .louder__anim {
@@ -1661,7 +1661,7 @@ hr.block__bdBottom {
   .blockMainBg__arg {
     background: url("../img/mainMobi/cirk.png") center top/cover no-repeat;
     position: absolute;
-    top: 124px;
+    top: 96px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -1670,7 +1670,7 @@ hr.block__bdBottom {
   .blockMainBg__logo {
     background: url("../img/mainMobi/logo.png") center/contain no-repeat;
     position: absolute;
-    top: 152px;
+    top: 124px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
@@ -1686,7 +1686,7 @@ hr.block__bdBottom {
   .blockMainGame {
     position: absolute;
     bottom: auto;
-    top: 520px;
+    top: 504px;
     left: 0;
     right: 0;
     display: -webkit-box;
@@ -1699,6 +1699,7 @@ hr.block__bdBottom {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    padding-bottom: 24px;
   }
 
   .blockMainGame__item {
@@ -1712,7 +1713,7 @@ hr.block__bdBottom {
 
   .block1 {
     left: 0;
-    top: 28px;
+    top: 0px;
     position: absolute;
     width: 156px;
     height: 132px;
@@ -1744,7 +1745,7 @@ hr.block__bdBottom {
 
   .block2 {
     right: 0;
-    top: 28px;
+    top: 0px;
     position: absolute;
     width: 156px;
     height: 132px;
@@ -1778,7 +1779,7 @@ hr.block__bdBottom {
 
   .block3 {
     position: absolute;
-    top: 140px;
+    top: 112px;
     left: 16px;
     width: 20px;
     height: 21px;
@@ -1791,7 +1792,7 @@ hr.block__bdBottom {
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    top: 58px;
+    top: 30px;
     width: 71px;
     height: 66px;
     background: url("../img/mainMobi/vip.png") center/contain no-repeat;
