--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -100,6 +100,24 @@ ol {
 
 @font-face {
   font-family: "Lato";
+  src: url("../fonts/Lato-Italic.eot");
+  src: url("../fonts/Lato-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Italic.woff") format("woff"), url("../fonts/Lato-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato-Regular.eot");
+  src: url("../fonts/Lato-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Regular.woff") format("woff"), url("../fonts/Lato-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Lato";
   src: url("../fonts/Lato-Black.eot");
   src: url("../fonts/Lato-Black.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato-Black.woff") format("woff"), url("../fonts/Lato-Black.ttf") format("truetype");
   font-weight: 900;
@@ -351,6 +369,12 @@ ol {
   font-weight: 800;
 }
 
+.wrapper {
+  padding: 0 30px;
+  margin: auto;
+  max-width: 1240px;
+}
+
 .mainTitle {
   font-style: normal;
   font-weight: 900;
@@ -360,6 +384,7 @@ ol {
   color: #ffffff;
   font-family: "Lato", sans-serif;
   position: relative;
+  margin-bottom: 64px !important;
 }
 
 .mainTitle::after {
@@ -378,10 +403,18 @@ ol {
 
 .jstTitle {
   font-style: normal;
-  font-weight: 900;
+  font-weight: normal;
   font-family: "Lato", sans-serif;
   font-size: 24px;
   line-height: 29px;
+  color: #333333;
+}
+
+.txt36x43 {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 43px;
   color: #333333;
 }
 
@@ -499,14 +532,14 @@ ol {
   color: #3a1f86;
   max-width: 826px;
   margin: auto;
-  margin-bottom: 88px;
+}
+
+.head .jstTitle {
+  font-weight: 900;
 }
 
 .head__wrapper {
   max-width: 1240px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: auto;
 }
 
 .head__cnt {
@@ -531,6 +564,338 @@ ol {
 
 .head__left .txt18x22 {
   margin-bottom: 50px;
+}
+
+.worthyLang {
+  position: relative;
+  overflow: hidden;
+  padding-top: 114px;
+  padding-bottom: 42px;
+}
+
+.worthyLang::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 676px;
+  z-index: -1;
+  background: url("../img/background/worthy-lang-bg.jpg") bottom center/cover no-repeat;
+}
+
+.worthyLang .jstTitle {
+  color: #ffffff;
+  text-align: center;
+  max-width: 530px;
+  margin: auto;
+}
+
+.worthyLang__cnt {
+  margin-top: 46px;
+}
+
+.worthyLangTabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.worthyLangTabs__listBtns {
+  -webkit-box-flex: 0;
+  -ms-flex: none;
+  flex: none;
+  padding-top: 91px;
+  padding-left: 30px;
+}
+
+.worthyLangTabs__itemBtb:last-child .worthyLangTabs__description::before {
+  display: none;
+}
+
+.worthyLangTabs__btn {
+  padding-left: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.worthyLangTabs__btn.active .worthyLangTabs__num {
+  background-color: #ff6d00;
+}
+
+.worthyLangTabs__btn:not(.active) .worthyLangTabs__description .txt {
+  display: none;
+}
+
+.worthyLangTabs__num {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border-radius: 20px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: #c4c4c4;
+  color: #ffffff;
+  top: 4px;
+  left: -60px;
+  -webkit-transition: all 0.12s ease-in-out;
+  -o-transition: all 0.12s ease-in-out;
+  transition: all 0.12s ease-in-out;
+}
+
+.worthyLangTabs__title {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.worthyLangTabs__description {
+  max-width: 306px;
+  margin-bottom: 15px;
+  text-align: start;
+  position: relative;
+  min-height: 25px;
+}
+
+.worthyLangTabs__description::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: -44px;
+  height: calc(100% - 7px);
+  width: 3px;
+  background: #c4c4c4;
+}
+
+.worthyLangTabs__itemBlock {
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  max-width: 100%;
+}
+
+.worthyLangTabs__itemBlock img {
+  max-width: 100%;
+  height: auto;
+}
+
+.worthyLangTabs__itemBlock:not(.active) {
+  opacity: 0;
+}
+
+.asSeen {
+  background: #f0f0f0;
+  padding-bottom: 24px;
+  padding-top: 45px;
+}
+
+.asSeen .jstTitle {
+  margin-bottom: 46px;
+  color: #8e8e8e;
+  text-align: center;
+  font-style: italic;
+}
+
+.asSeen__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.asSeen__item {
+  width: 33.33%;
+  margin-bottom: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+}
+
+.asSeen__item img {
+  margin: auto;
+  max-width: 100%;
+}
+
+.thousandHours {
+  position: relative;
+  padding-top: 85px;
+  padding-bottom: 266px;
+}
+
+.thousandHours__bg {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url("../img/background/new2.png") bottom center/cover no-repeat;
+}
+
+.thousandHours__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.thousandHours .jstTitle {
+  color: #ffffff;
+  text-align: center;
+}
+
+.thousandHours .button {
+  margin-top: 46px;
+}
+
+.designerLevels {
+  padding-top: 60px;
+  padding-bottom: 84px;
+  background-color: #ff6d00;
+  position: relative;
+}
+
+.designerLevels:after {
+  content: "";
+  position: absolute;
+  top: 33px;
+  right: 0;
+  background-image: url("../img/elements/right-levels.png");
+  width: 211px;
+  height: 346px;
+  background-size: 100%;
+}
+
+.designerLevels:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-image: url("../img/elements/left-levels.png");
+  width: 259px;
+  height: 259px;
+  background-size: 100%;
+}
+
+.designerLevels .mainTitle:after {
+  background: #ffffff;
+}
+
+.designerLevels .mainTitle ~ .jstTitle {
+  max-width: 918px;
+  margin: auto;
+}
+
+.designerLevels .jstTitle {
+  color: #ffffff;
+  text-align: center;
+}
+
+.designerLevels__row {
+  margin-top: 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.designerLevels__item {
+  margin: auto;
+}
+
+.designerLevels__item .jstTitle {
+  font-weight: 900;
+}
+
+.designerLevels__stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.designerLevels__star {
+  margin-left: 6px;
+  margin-right: 6px;
+  width: 30px;
+  height: 30px;
+  display: block;
+  background: url("../img/elements/star-white.png") center/contain no-repeat;
+}
+
+.bestTV {
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
+.bestTV .mainTitle {
+  color: #333333;
+}
+
+.bestTV__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin-top: -10px;
+  margin-bottom: -10px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.bestTV__item {
+  max-width: 170px;
+  margin: auto;
+  padding: 10px 20px;
+}
+
+.bestTV__item img {
+  max-width: 100%;
+  height: auto;
 }
 
 /* ================================================= */
@@ -594,6 +959,19 @@ ol {
     font-size: 50px;
     line-height: 58px;
   }
+
+  .worthyLangTabs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -616,7 +994,7 @@ ol {
     margin-left: 38px;
   }
 
-  .head__wrapper {
+  .wrapper {
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -624,14 +1002,51 @@ ol {
   .mainTitle {
     font-size: 29px;
     line-height: 34px;
+    margin-bottom: 30px !important;
   }
 
   .mainTitle::after {
     bottom: -14px;
   }
 
-  .head .mainTitle {
-    margin-bottom: 30px;
+  .worthyLangTabs__listBtns {
+    padding-left: 0;
+  }
+
+  .worthyLangTabs__btn {
+    padding-left: 40px;
+  }
+
+  .worthyLangTabs__num {
+    left: -40px;
+  }
+
+  .worthyLangTabs__description::before {
+    left: -24px;
+  }
+
+  .worthyLangTabs__listBtns {
+    padding-top: 40px;
+  }
+
+  .asSeen__item {
+    width: 50%;
+  }
+
+  .thousandHours {
+    padding-bottom: 188px;
+  }
+
+  .designerLevels__row {
+    display: block;
+  }
+
+  .designerLevels__item {
+    margin-bottom: 60px;
+  }
+
+  .designerLevels__item:last-child {
+    margin-bottom: 0;
   }
 }
 
