--- a/test/assets/css/styles.css
+++ b/test/assets/css/styles.css
@@ -444,6 +444,9 @@ ol {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-transition: all 0.12s ease-in-out;
+  -o-transition: all 0.12s ease-in-out;
+  transition: all 0.12s ease-in-out;
 }
 
 .button .free {
@@ -461,6 +464,24 @@ ol {
   transform: rotate(90deg);
   fill: white;
   stroke-width: 10;
+}
+
+.button--blue {
+  background: #3a1f86;
+}
+
+.button--blue .free {
+  color: #3a1f86;
+}
+
+.button:hover {
+  opacity: 0.7;
+}
+
+.button:active {
+  -webkit-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  transform: scale(0.9);
 }
 
 .videoContainer {
@@ -582,7 +603,7 @@ ol {
   right: 0;
   height: 676px;
   z-index: -1;
-  background: url("../img/background/worthy-lang-bg.jpg") bottom center/cover no-repeat;
+  background: url("../assets/img/background/worthy-lang-bg.jpg") bottom center/cover no-repeat;
 }
 
 .worthyLang .jstTitle {
@@ -760,7 +781,7 @@ ol {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("../img/background/new2.png") bottom center/cover no-repeat;
+  background: url("../assets/img/background/new2.png") bottom center/cover no-repeat;
 }
 
 .thousandHours__wrapper {
@@ -797,7 +818,7 @@ ol {
   position: absolute;
   top: 33px;
   right: 0;
-  background-image: url("../img/elements/right-levels.png");
+  background-image: url("../assets/img/elements/right-levels.png");
   width: 211px;
   height: 346px;
   background-size: 100%;
@@ -808,7 +829,7 @@ ol {
   position: absolute;
   bottom: 0;
   left: 0;
-  background-image: url("../img/elements/left-levels.png");
+  background-image: url("../assets/img/elements/left-levels.png");
   width: 259px;
   height: 259px;
   background-size: 100%;
@@ -859,7 +880,7 @@ ol {
   width: 30px;
   height: 30px;
   display: block;
-  background: url("../img/elements/star-white.png") center/contain no-repeat;
+  background: url("../assets/img/elements/star-white.png") center/contain no-repeat;
 }
 
 .bestTV {
@@ -898,9 +919,285 @@ ol {
   height: auto;
 }
 
+.vocabSec {
+  position: relative;
+  padding-bottom: 154px;
+  padding-top: 77px;
+}
+
+.vocabSec .jstTitle {
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 46px;
+}
+
+.vocabSec__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  background: #3a1f86 url("../assets/img/background/vocab-bg.jpg") center top/cover no-repeat;
+}
+
+.vocabSec__graf {
+  margin: auto;
+  max-width: 414px;
+  margin-bottom: 77px;
+}
+
+.vocabSec__graf img {
+  max-width: 100%;
+}
+
+.vocabSec__chat {
+  max-width: 870px;
+  margin: auto;
+}
+
+.vocabSec__chatItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.vocabSec__chatItem:last-child {
+  margin-bottom: 0;
+}
+
+.vocabSec__chatItem .vocabSec__chatMessage {
+  margin-right: 80px;
+}
+
+.vocabSec__chatItem:nth-child(2n) {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+
+.vocabSec__chatItem:nth-child(2n) .vocabSec__chatMessage {
+  margin-right: 0px;
+  margin-left: 80px;
+}
+
+.vocabSec__chatMessage {
+  background: #ffffff;
+  border-radius: 20px;
+  padding: 25px 50px;
+  color: #333333;
+  position: relative;
+}
+
+.vocabSec__chatAvatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50px;
+  overflow: hidden;
+  border: 2px solid #ffffff;
+  -webkit-box-flex: 0;
+  -ms-flex: none;
+  flex: none;
+}
+
+.vocabSec__chatAvatar img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  display: block;
+}
+
+.tryalAccess {
+  padding-bottom: 225px;
+  padding-top: 90px;
+  position: relative;
+  overflow: hidden;
+}
+
+.tryalAccess__bg:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ff6d00;
+  z-index: -1;
+}
+
+.tryalAccess__bg:after {
+  content: "";
+  display: block;
+  background: url("../assets/img/elements/tryal-bg.png") center/cover no-repeat;
+  width: 518px;
+  height: 404px;
+  bottom: 0;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  z-index: -1;
+}
+
+.tryalAccess__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.tryalAccess__left {
+  width: 50%;
+}
+
+.tryalAccess__left .mainTitle {
+  margin-bottom: 36px;
+  text-align: start;
+}
+
+.tryalAccess__right {
+  width: 50%;
+  padding-left: 135px;
+}
+
+.tryalAccess__acc {
+  margin-bottom: 60px;
+}
+
+.tryalAccess__accItem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #ffffff;
+  margin-bottom: 35px;
+}
+
+.tryalAccess__accItem:last-child {
+  margin-bottom: 0;
+}
+
+.tryalAccess__accItem:before {
+  content: "";
+  display: block;
+  width: 45px;
+  height: 45px;
+  margin-right: 24px;
+  background: url("../assets/img/elements/checked.png") center/contain no-repeat;
+}
+
+.accordion__item:not(.active) .accordion__content {
+  font-size: 0;
+  line-height: 0;
+  padding: 0;
+}
+
+.accordion__item.active .accordion__btn:after {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.accordion__btn {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 21px 15px;
+  font-weight: 800;
+}
+
+.accordion__btn::after {
+  -webkit-transition: all 0.12s ease-in-out;
+  -o-transition: all 0.12s ease-in-out;
+  transition: all 0.12s ease-in-out;
+  content: "";
+  display: block;
+  background: url("../assets/img/elements/faq_dropdown.png") center/contain no-repeat;
+  width: 17px;
+  height: 12px;
+}
+
+.accordion__content {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #03040a;
+}
+
+.faq {
+  padding-bottom: 82px;
+  padding-top: 70px;
+}
+
+.faq .mainTitle {
+  color: #333333;
+}
+
+.faq__accordion {
+  max-width: 800px;
+  margin: auto;
+}
+
 /* ================================================= */
 
 /* ================================================= */
+
+@media screen and (min-width: 768px) {
+  .vocabSec__chatItem:nth-child(2n) .vocabSec__chatMessage::after {
+    left: auto;
+    right: 100%;
+    top: 20px;
+    width: 0;
+    height: 0;
+    border: 0 solid transparent;
+    border-left-width: 44px;
+    border-right-width: 0;
+    border-top: 25px solid #fff;
+  }
+
+  .vocabSec__chatMessage::after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 100%;
+    top: 20px;
+    width: 0;
+    height: 0;
+    border: 0 solid transparent;
+    border-right-width: 44px;
+    border-left-width: 0px;
+    border-top: 25px solid #fff;
+  }
+}
 
 @media screen and (max-width: 1200px) {
   .footer__wrapper {
@@ -971,6 +1268,36 @@ ol {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+  }
+
+  .tryalAccess__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .tryalAccess__left {
+    width: 100%;
+  }
+
+  .tryalAccess__right {
+    margin-top: 60px;
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .tryalAccess__bg:after {
+    opacity: 0.7;
+    right: -120px;
+    left: auto;
+    -webkit-transform: translate(0);
+    -ms-transform: translate(0);
+    transform: translate(0);
+  }
+
+  .tryalAccess {
+    padding-bottom: 90px;
   }
 }
 
@@ -1047,6 +1374,46 @@ ol {
 
   .designerLevels__item:last-child {
     margin-bottom: 0;
+  }
+
+  .vocabSec__chatAvatar {
+    margin-bottom: 22px;
+  }
+
+  .vocabSec__chatItem {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: reverse !important;
+    -ms-flex-direction: column-reverse !important;
+    flex-direction: column-reverse !important;
+  }
+
+  .vocabSec__chatItem:nth-child(2n) .vocabSec__chatMessage {
+    margin-left: auto;
+  }
+
+  .vocabSec__chatItem .vocabSec__chatMessage {
+    margin-right: 0;
+  }
+
+  .vocabSec__chatItem .vocabSec__chatMessage:after {
+    width: 0;
+    height: 0;
+    content: "";
+    display: block;
+    position: absolute;
+    border: 0 solid transparent;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    bottom: 100%;
+    top: auto;
+    border-right-width: 16px;
+    border-left-width: 16px;
+    border-bottom: 15px solid #fff;
   }
 }
 
