--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -632,6 +632,9 @@ ol {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   overflow-y: auto;
   z-index: 1000;
 }
