--- a/test/assets/css/styles.css
+++ b/test/assets/css/styles.css
@@ -1011,7 +1011,7 @@ body::before {
   right: 0;
   bottom: 71px;
   z-index: -1000;
-  background: #2a2a2a;
+  background: #252525;
 }
 
 .bgElemLight2 {
